# seat_rush

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
migration/src/: m20220101_000001_create_table.rs
src/: main.rs
src/api/: mod.rs
src/api/v1/: mod.rs
src/api/v1/auth/: login.rs  mod.rs  register.rs
src/api/v1/tickets/: buy.rs  cancel.rs  mod.rs  rez.rs
src/domain/: mod.rs
src/domain/dtos/: auth.rs  mod.rs  tickets.rs
src/domain/entities/: mod.rs  prelude.rs  seat.rs  sessions.rs  ticket.rs  user.rs
src/domain/models/: calims.rs  mod.rs  user.rs
src/extension/: mod.rs  tokens_cookie.rs
src/infrastructure/: db.rs  mod.rs  state.rs
src/repository/: auth.rs  mod.rs  seat.rs  tickets.rs  user.rs
src/service/auth/: login.rs  mod.rs  refresh.rs  register.rs
src/service/tickets/: buy.rs  cancel.rs  mod.rs  reserve.rs
src/utils/: error.rs  jwt.rs  mod.rs  responser.rs  result.rs
