[package]
name = "seat_rush"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm ={ version = "2.0.0-rc.22", features = ["sqlx-postgres","runtime-tokio-rustls"]}
redis = { version = "1.0.2", features = ["tokio-comp"] }
actix-web = "4.12.1"
dotenv = "0.15.0"
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11.8"
argon2 = "0.5.3"
validator = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.17"
actix-multipart = "0.7.2"
actix-http = "3.11.2"
jsonwebtoken = { version = "10.2.0", features = ["use_pem", "rust_crypto"] }
reqwest = "0.12.26"
futures-core = "0.3.31"
time = "0.3.44"
rand = "0.9.2"
